--- a/assets/css/sass/_variables.sass
+++ b/assets/css/sass/_variables.sass
@@ -23,3 +23,7 @@ $unicode-agent: "\e902" !default
 // alias for $unicode-lock
 // used on .icon-login on _icons.scss file
 $unicode-login: "\e903" !default
+
+
+$brand-space: #cfad29!default
+$brand-agent: #84aca2 !default
